make changes to sass import to work with compass/sass compiler instead of jekyll compiler

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -1,12 +1,9 @@
----
----
-
 //
 // IMPORTS
 //
 
-@import "_reset";
-@import "_variables";
+@import "reset";
+@import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
