--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@
       <div class="container">
         <header class="masthead clearfix">
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-          
+
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
-          
+
           <nav>
             <a href="{{ site.baseurl }}/">News</a>
             <a href="{{ site.baseurl }}/about">About</a>
@@ -47,6 +47,7 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+          {% include footer2.html %}
         </footer>
       </div>
     </div>
