Revert "make changes to sass import to work with compass/sass compiler instead of jekyll compiler" -- didn't work on github
This reverts commit 7a1cf5f487a6559afd4fa33cf30d5b0954d04594.

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -1,9 +1,12 @@
+---
+---
+
 //
 // IMPORTS
 //
 
-@import "reset";
-@import "variables";
+@import "_reset";
+@import "_variables";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
