UPDATE homepage with promo flyer link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/news">News</a>
+            <a href="{{ site.baseurl }}/news">Meetups</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <!--a href="{{ site.baseurl }}/hi">I'm Here</a-->
           </nav>
