--- a/_scss/_svg-icons.scss
+++ b/_scss/_svg-icons.scss
@@ -25,16 +25,16 @@
   margin-right:10px;
   margin-bottm:10px;
   }
-.headshot img { width:150px;}
-
 .headshot:after {
-	content: ".";
-	display: block;
-	height: 0;
-	clear: both;
-	visibility: hidden;
-}
+  content: "";
+  display: table;
+  clear: both;
+  }
+.headshot img {
+  width:150px;
+  }
 .post blockquote {
   font-size: 16px;
   background: #F3F3F3;
+  overflow:hidden;
 }
