--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <meta name="author" content="{{ site.name }}" />
     <meta name="description" content="{{ site.description }}">
-
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Black|Aldrich|Droid+Sans' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
