--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <nav>
             <a href="{{ site.baseurl }}/news">Meetups</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <!--a href="{{ site.baseurl }}/hi">I'm Here</a-->
+            <a href="{{ site.baseurl }}/hi">I'm Here</a>
           </nav>
         </header>
       </div>
