--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    {% include favicon.html %}
   </head>
 
   <body>
