--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
@@ -33,7 +33,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/news">Meetups</a>
+            <a href="{{ site.baseurl }}/meetups">Meetups</a>
             <a href="{{ site.baseurl }}/about">About</a>
             {% if site.signin-link %}<a href="{{ site.baseurl }}/hi">I'm Here</a>{% endif %}
           </nav>
