--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -8,5 +8,5 @@
 {% if site.footer-links.pinterest %}<a href="http://pinterest.com/{{ site.footer-links.pinterest }}"><i class="svg-icon pinterest"></i></a>{% endif %}
 {% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>{% endif %}
 {% if site.footer-links.twitter %}<a href="http://twitter.com/{{ site.footer-links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
-{% if site.footer-links.irc %}<a target="_blank" href="http://webchat.freenode.net/?nick=LBTech-guest&channels=%23css%2C%23sass%2C%23less%2C%23atom%2C%23node.js%2C%23io.js%2C%23drupal%2C%23nginx%2C%23LBTech&prompt=1&uio=OT10cnVlJjEwPXRydWU3a"><i class="svg-icon irc"></i></a>{% endif %}
+{% if site.links.irc.channels %}<a target="_blank" href="https://kiwiirc.com/client/irc.freenode.net/?nick={{ site.links.irc.nick }}|?{{ site.links.irc.channels }}"><i class="svg-icon irc"></i></a>{% endif %}
 {% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
