fix: meetups link back to news for SEO

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/meetups">Meetups</a>
+            <a href="{{ site.baseurl }}/news">Meetups</a>
             <a href="{{ site.baseurl }}/about">About</a>
             {% if site.signin-link %}<a href="{{ site.baseurl }}/hi">I'm Here</a>{% endif %}
           </nav>
