feat: add style for blockquote

--- a/style.scss
+++ b/style.scss
@@ -243,6 +243,14 @@ nav {
 //
 // .main
 //
+blockquote {
+  margin: 1.8em .8em;
+  border-left: 2px solid $gray;
+  padding: 0.1em 1em;
+  color: $gray;
+  font-size: 22px;
+  font-style: italic;
+}
 
 .posts > .post {
   padding-bottom: 2em;
