--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/meetups">Meetups</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/meetup/">Meetups</a>
+            <a href="{{ site.baseurl }}/about/">About</a>
             {% if site.signin-link %}<a href="{{ site.baseurl }}/hi">I'm Here</a>{% endif %}
           </nav>
         </header>
