--- a/style.scss
+++ b/style.scss
@@ -290,6 +290,12 @@ blockquote {
   background-color: $lightGray;
 }
 
+.logo {
+  max-height: 70px;
+  //padding-right: 10px;
+  //padding-bottom: 10px;
+}
+
 footer {
   padding: 20px 0;
   text-align: center;
