--- a/style.scss
+++ b/style.scss
@@ -110,8 +110,10 @@ img {
   max-width: 100%;
 }
 img[alt="flyer"] {
+  margin-left: auto;
+  margin-right: auto;
+  width: 720px;
   max-width: 136%;
-  margin-left: -48px;
 }
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
@@ -277,9 +279,11 @@ blockquote {
     margin-top: 10px;
   }
 
-  .read-more {
+  .read-more, .convince {
     text-transform: uppercase;
     font-size: 15px;
+    background-color: #f0f0f0;
+    padding: 10px;
   }
 }
 
