fix iframe on small devices

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,19 @@
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
     {% include favicon.html %}
+    <style>
+    @media (max-width: 767px) {
+    iframe {
+        max-width: calc(100vw) !important;
+        margin: -11px -25px;
+      }
+    .iframe-wrapper {
+        width:100vw;
+        overflow: hidden;
+        margin: 0 -15px;}
+        /* you might not the margin property on the wrapper (or you might need to change it to suit your needs); in my case it's used to align the wrapper with the edge of the screen as my site has 15px padding, which isn't needed here because the form already has it's own padding   */
+      }
+      </style>
   </head>
 
   <body>
