--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.baseurl }}{{ site.avatar }}" alt="Avatar"/></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">WAPRO</a></h1>
+            <p class="site-description">Web & App Professionals</p>
           </div>
 
           <nav>
