ADD: banner images to homepage and meetup page

--- a/_includes/mdr/banner_image.html
+++ b/_includes/mdr/banner_image.html
@@ -1,3 +1,5 @@
 {% if page.promo_image %}
 <img src="{{ base.url }}{{ page.promo_image }}" alt="{{ page.promo_image_desc }}">
+{% elsif post.promo_image %}
+<img src="{{ base.url }}{{ post.promo_image }}" alt="{{ post.promo_image_desc }}">
 {% endif %}
