FEAT: change includes to reduce repetition

--- a/_includes/boilerplate/about_wapro.html
+++ b/_includes/boilerplate/about_wapro.html
@@ -1,11 +1,9 @@
 <h3 id="about-wapro">ABOUT WAPRO</h3>
 
 <p>The Long Beach Web &amp; App Professionals (#WAPRO) group meets monthly to share and learn about the technology that ignites our imagination, builds our skill-set, expands our network, and grows community!</p>
-
-<h3 id="meeting-topics">MEETING TOPICS</h3>
-
-<p>In the past we’ve had professionals present that have worked on projects such as Spacex, Riot Games, X-prize, Adobe, Toyota Motor Sports, VMWare, UCLA, CSULB, AARP, and more … using technologies such as <a href="http://getbootstrap.com/">Bootstrap</a>, <a href="http://bower.io">Bower</a>, <a href="http://browserify.org/">Browserfy</a>, <a href="https://github.com/davidhwang/horseman">Headless Drupal</a>, <a href="https://developer.apple.com/swift/">iOS Swift</a>, <a href="http://jekyllrb.com">Jekyll</a>, <a href="https://www.meteor.com/">Meteor</a>, <a href="https://iojs.org/en/">Node.js</a>, <a href="http://sass-lang.com/">SASS</a>, <a href="http://sculpin.io">Sculpin</a>, <a href="http://zapier.com">Zapier</a> and more.</p>
-
+<aside>
+{% include boilerplate/meeting_topics.html %}
+</aside>
 <p>Every month we come together to:</p>
 
 <ul>
