--- a/_includes/boilerplate/venue_gj.html
+++ b/_includes/boilerplate/venue_gj.html
@@ -1,4 +1,3 @@
-
 <h2 id="venue--meetup-info">VENUE & MEETUP INFO</h2>
 <img src="/images/GunnJerkins-Offices.jpg" alt="GunnJerkins Offices">
 
@@ -18,6 +17,6 @@
   </div>
 </div>
 
-<p><strong>MAP LINK:</strong> <a href="https://j.mp/wapro-gj">Map</a><br>
-<strong>Directions from 405 FWY at Lakewood:</strong> <a href="https://j.mp/wapro-gj">Directions</a><br>
+<p><strong>MAP LINK:</strong> <a href="https://j.mp/wapro-gj" target="_blank" rel="nofollow">Map</a><br>
+<strong>Directions from 405 FWY at Lakewood:</strong> <a href="https://j.mp/wapro-gj" target="_blank" rel="nofollow">Directions</a><br>
 <strong>Instructions:</strong>  Gunn-Jerkins building is on the South-East corner of Cover + Schaufele. Enter driveway on Shaufele (just South of Cover), then first building on left at the SE corner of the building. If you have any trouble finding the office, please call: 562-499-6707.</p>
