--- a/_includes/boilerplate/venue_welabs.html
+++ b/_includes/boilerplate/venue_welabs.html
@@ -14,11 +14,11 @@
     <span property="addressLocality">Long Beach</span>,
     <span property="addressRegion">CA</span>
     <span property="postalCode">90802</span><br>
-    <a href="https://www.google.com/maps/place/235+E+Broadway,+Long+Beach,+CA+90802/@33.7695439,-118.1919345,17z/" target="_blank">Map</a><br>
+    <a href="https://www.google.com/maps/place/235+E+Broadway,+Long+Beach,+CA+90802/@33.7695439,-118.1919345,17z/" target="_blank" rel="nofollow">Map</a><br>
   </div>
 </div>
 </p>
 
 <strong>PARKING:</strong><br>
-<strong>FREE:</strong> Street parking east of Long Beach Blvd after 6p.  <a href="http://www.downtownlongbeach.org/parking" target="_blank">Metered until 6p</a>.  WE Labs is on the corner.<br>
-<strong>CHEAP:</strong> <a href="https://www.google.com/maps/d/viewer?mid=z-je1exzTCd4.koH8EDyrfmPg&msa=0&ie=UTF8&t=m&ll=33.76923,-118.189459&spn=0.01427,0.038581&z=15">The Cityplace Lot C #6</a> ... 2hrs FREE then hourly<br>
+<strong>FREE:</strong> Street parking east of Long Beach Blvd after 6p.  <a href="http://www.downtownlongbeach.org/parking" target="_blank" rel="nofollow">Metered until 6p</a>.  WE Labs is on the corner.<br>
+<strong>CHEAP:</strong> <a href="https://www.google.com/maps/d/viewer?mid=z-je1exzTCd4.koH8EDyrfmPg&msa=0&ie=UTF8&t=m&ll=33.76923,-118.189459&spn=0.01427,0.038581&z=15" target="_blank" rel="nofollow">The Cityplace Lot C #6</a> ... 2hrs FREE then hourly<br>
