--- a/_includes/mdr/banner_image.html
+++ b/_includes/mdr/banner_image.html
@@ -1,5 +1,5 @@
-{% if page.promo_image %}
-<img src="{{ base.url }}{{ page.promo_image }}" alt="{{ page.promo_image_desc }}">
-{% elsif post.promo_image %}
-<img src="{{ base.url }}{{ post.promo_image }}" alt="{{ post.promo_image_desc }}">
+{% if page.image %}
+<img src="{{ base.url }}{{ page.image }}" alt="{{ page.image_desc }}">
+{% elsif post.image %}
+<img src="{{ base.url }}{{ post.image }}" alt="{{ post.image_desc }}">
 {% endif %}
