:wrench: Add new venue JLOOP

--- a/_layouts/meetup.html
+++ b/_layouts/meetup.html
@@ -54,6 +54,8 @@ layout: default
     {% include boilerplate/venue_welabs.html %}
   {% elsif page.venue == "GJ" %}
     {% include boilerplate/venue_gj.html %}
+  {% elsif page.venue == "JLOOP" %}
+    {% include boilerplate/venue_jloop.html %}
   {% endif %}
   </section>
 
