:sparkles: New Venue Ironfire

--- a/_layouts/meetup.html
+++ b/_layouts/meetup.html
@@ -56,6 +56,8 @@ layout: default
     {% include boilerplate/venue_gj.html %}
   {% elsif page.venue == "JLOOP" %}
     {% include boilerplate/venue_jloop.html %}
+  {% elsif page.venue == "IRONFIRE" %}
+    {% include boilerplate/venue_ironfire.html %}
   {% endif %}
   </section>
 
